# membrane_live_compositor_plugin

./: .credo.exs  .gitignore  LICENSE  README.md  bundlex.exs  download_compositor.sh  mix.exs  output.h264
native/membrane_video_compositor_common/: Cargo.toml
native/membrane_video_compositor_common/src/: elixir_transfer.rs  errors.rs  lib.rs  plugins.rs  test_utils.rs  texture.rs  textures.rs  uniform.rs
native/membrane_video_compositor_common/src/plugins/: layout.rs  transformation.rs
native/membrane_videocompositor/: Cargo.toml  README.md
native/membrane_videocompositor/src/: compositor.rs  elixir_bridge.rs  elixir_socket.rs  elixir_structs.rs  errors.rs  lib.rs  new_compositor.rs  scene.rs  shader.wgsl
native/membrane_videocompositor/src/compositor/: common.rs  math.rs  pipeline_common.rs  pipeline_utils.rs  scene.rs  textures.rs  vec2d.rs  vertex.rs  videos.rs
native/membrane_videocompositor/src/compositor/colour_converters/: mod.rs  yuv_to_rgba.wgsl
native/membrane_videocompositor/src/compositor/edge_rounder/: edge_rounding.wgsl  edge_rounding_shader.wgsl  mod.rs
native/membrane_videocompositor/src/compositor/edge_rounding/: edge_rounder.rs  edge_rounding_shader.wgsl
native/membrane_videocompositor/src/compositor/texture_transformations/: mod.rs  registry.rs  texture_transformation_pipeline.rs  texture_transformers.rs
native/membrane_videocompositor/src/compositor/texture_transformations/corners_rounding/: corners_rounding.wgsl  mod.rs
native/membrane_videocompositor/src/compositor/texture_transformations/cropping/: cropping.wgsl  mod.rs
native/membrane_videocompositor/src/compositor/textures_transformations/: mod.rs  texture_transformer.rs  texture_transformers.rs
native/membrane_videocompositor/src/compositor/textures_transformations/corner_rounding/: corner_rounding.wgsl  mod.rs
native/membrane_videocompositor/src/compositor/transformations/: mod.rs  pipeline.rs  registry.rs
native/membrane_videocompositor/src/elixir_bridge/: elixir_scene.rs  elixir_structs.rs  scene_validation.rs
native/membrane_videocompositor_opengl_rust/: Cargo.toml  README.md  build.rs
native/membrane_videocompositor_opengl_rust/glad-gles2/: Cargo.toml
native/membrane_videocompositor_opengl_rust/glad-gles2/src/: gl.rs
native/membrane_videocompositor_opengl_rust/src/: errors.rs  framebuffers.rs  lib.rs  scene.rs  shaders.rs  textures.rs
native/membrane_videocompositor_opengl_rust/src/shaders/: fragment.glsl  vertex.glsl
native/membrane_videocompositor_wgpu/: Cargo.toml  README.md
native/membrane_videocompositor_wgpu/src/: compositor.rs  errors.rs  lib.rs  shader.wgsl
native/membrane_videocompositor_wgpu/src/compositor/: textures.rs  videos.rs
native/membrane_videocompositor_wgpu/src/compositor/color_converters/: mod.rs  rgba_to_yuv.wgsl  yuv_to_rgba.wgsl
native/membrane_videocompositor_wgpu/src/compositor/colour_converters/: mod.rs  rgba_to_yuv.wgsl
(+585 files in other folders)
