[package]
name = "membrane_video_compositor_common"
version = "0.1.0"
authors = ["Membrane Team"]
license = "Apache-2.0"
homepage = "https://membrane.stream/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
futures = "0.3.24"
thiserror = "1.0.37"
wgpu = "0.14.0"

[dev-dependencies]
pollster = "0.2.5"
