[package]
name = "membrane_videocompositor"
version = "0.1.0"
authors = ["Membrane Team"]
license = "Apache-2.0"
homepage = "https://membrane.stream/"
edition = "2021"

[lib]
name = "membrane_videocompositor"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"
futures-intrusive = "0.4.0"
pollster = "0.2.5"
thiserror = "1.0.35"
rustler = "0.28.0"
membrane_video_compositor_common = { path = "../membrane_video_compositor_common" }
