[package]
name = "membrane_videocompositor_opengl_rust"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "membrane_videocompositor_opengl_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
khronos-egl = { version = "4.1.0", features = ["static", "no-pkg-config"] }
glad-gles2 = { path = "glad-gles2" }
thiserror = "1.0.32"
