[package]
name = "membrane_videocompositor_wgpu"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "membrane_videocompositor_wgpu"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
futures-intrusive = "0.4.0"
pollster = "0.2.5"
rustler = "0.26.0"
wgpu = "0.13.1"
